--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint 'src/**/*.{ts,tsx}'"
+    "lint": "eslint src"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "eslint": "^8.57.0",
-    "typescript": "^5.5.3",
-    "eslint-plugin-project-structure": "^2.0.0"
+    "eslint-plugin-project-structure": "^2.0.0",
+    "typescript": "^5.5.3"
   }
 }
