--- a/packageLegacyConfig.json
+++ b/packageLegacyConfig.json
@@ -4,17 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/eslint__js": "^8.42.3",
-    "eslint": "^9.8.0",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.1",
-    "eslint-plugin-project-structure": "^2.1.5"
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-project-structure": "^2.1.5",
+    "typescript": "^5.5.4"
   }
 }
