--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "strict": true,
     "esModuleInterop": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "lib": ["ESNext"],
+    "moduleResolution": "Node",
+    "removeComments": true,
+    "strict": true,
+    "alwaysStrict": true,
+    "noImplicitReturns": true,
+    "noEmit": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "rootDir": "src",
     "baseUrl": "src",
-    "jsx": "react"
+    "allowJs": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "./eslint.config.mjs",
+    "./folderStructure.mjs",
+    "./independentModules.mjs",
+    "./namingRules.mjs"
+  ]
 }
