--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
       "plugins": ["project-structure"],
       "settings": {
         "project-structure/folder-structure-config-path": "folderStructure.json",
-        "project-structure/independent-modules-config-path": "independentModules.json"
+        "project-structure/independent-modules-config-path": "independentModules.json",
+        "project-structure/naming-rules-config-path": "namingRules.json"
       },
       "extends": [
         "eslint:recommended",
@@ -46,73 +47,7 @@
         "@typescript-eslint/no-empty-object-type": "off",
         "project-structure/folder-structure": "error",
         "project-structure/independent-modules": "error",
-        "project-structure/naming-rules": [
-          "error",
-          {
-            "filePattern": "**/*consts.ts",
-            "rules": [
-              {
-                "nameType": "variable",
-                "allowNames": ["{SNAKE_CASE}"]
-              }
-            ]
-          },
-          {
-            "filePattern": "**/*.types.ts",
-            "rules": [
-              {
-                "nameType": ["interface", "type"],
-                "allowNamesFileRoot": ["{PascalCase}"]
-              },
-              {
-                "nameType": "enum",
-                "allowNames": ["{SNAKE_CASE}"]
-              }
-            ]
-          },
-          {
-            "filePattern": "**/*.tsx",
-            "rules": [
-              {
-                "nameType": ["arrowFunction", "function"],
-                "allowNamesFileRoot": ["{filename_PascalCase}"],
-                "allowNames": ["{camelCase}"]
-              },
-              {
-                "nameType": ["interface", "type"],
-                "allowNamesFileRoot": [
-                  "{filename_PascalCase}Props",
-                  "{filename_PascalCase}Return"
-                ]
-              },
-              {
-                "nameType": ["variable"],
-                "allowNames": ["{camelCase}"]
-              }
-            ]
-          },
-          {
-            "filePattern": "**/*.ts",
-            "rules": [
-              {
-                "nameType": ["arrowFunction", "function"],
-                "allowNamesFileRoot": ["{filename_camelCase}"],
-                "allowNames": ["{camelCase}"]
-              },
-              {
-                "nameType": ["interface", "type"],
-                "allowNamesFileRoot": [
-                  "{filename_PascalCase}Props",
-                  "{filename_PascalCase}Return"
-                ]
-              },
-              {
-                "nameType": "variable",
-                "allowNames": ["{camelCase}"]
-              }
-            ]
-          }
-        ]
+        "project-structure/naming-rules": "error"
       }
     }
   ]
