--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,10 +44,25 @@
         "plugin:@typescript-eslint/recommended"
       ],
       "rules": {
-        "@typescript-eslint/no-empty-object-type": "off",
         "project-structure/folder-structure": "error",
         "project-structure/independent-modules": "error",
-        "project-structure/naming-rules": "error"
+        "project-structure/naming-rules": "error",
+
+        "no-duplicate-imports": "error",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-empty-object-type": "off",
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "args": "all",
+            "vars": "all",
+            "varsIgnorePattern": "^_",
+            "argsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_",
+            "destructuredArrayIgnorePattern": "^_",
+            "ignoreRestSiblings": true
+          }
+        ]
       }
     }
   ]
