--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "./eslint.config.mjs",
     "./folderStructure.mjs",
     "./independentModules.mjs",
-    "./namingRules.mjs"
+    "./fileComposition.mjs"
   ]
 }
